# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp  shader.hpp
depend/glad/: glad.cmake
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
shader/: light_shader.fs  light_shader.vs  shader.fs
src/: shader.hpp
